[package]
name = "flight_tracking_erau_se300"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/TroyNeubauer/FlightTracking"
documentation = "https://docs.rs/flight_tracking_erau_se300"
description = "An app that displays the path of planes through the country of United States"
license = "MIT"

[dependencies]
conrod_core = "0.75.0"
conrod_winit = "0.75.0"
conrod_glium = "0.75.0"

glium = "0.28"
winit = "0.23"
glam = "0.19"
itertools = "0.10"
num = "0.4"

find_folder =  "0.3.0"
image = "0.22"
tokio = { version = "1.12.0", features = ["full"]}

rain_viewer = "0.1.1"
maptiler-cloud = "0.2.0"
