[package]
name = "flight_tracking_erau_se300"
version = "0.4.0"
edition = "2021"
readme = "README.md"
authors = ["Troy Neubauer <troyneubauer@gmail.com>", "Luke Newcomb <newcomb.luke@protonmail.com>", "Walter Hernandez <zhernandezwalter@gmail.com", "Ricardo Iparraguirre <iparragr@my.erau.edu>"]
repository = "https://github.com/TroyNeubauer/FlightTracking"
documentation = "https://docs.rs/flight_tracking_erau_se300"
description = "An app that displays the path of planes through the country of United States"
license = "GPL-3.0"

[dependencies]
conrod_core = "0.75"
conrod_winit = "0.75"
conrod_glium = "0.75"

glium = "0.28"
winit = "0.23"
glam = "0.19"

itertools = "0.10"
num = "0.4"
lazy_static = "1.0"
find_folder =  "0.3"
rand = "0.8"
cgmath = "0.18.0"

async-trait = "0.1"
thiserror = "1.0"

image = "0.22"
rain_viewer = "0.3"
maptiler-cloud = "0.3"
opensky_api = "0.1.4"

tokio = { version = "1.12", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

parking_lot = "0.11"
simple_moving_average = "0.1"

intmap = "0.7"
enum-map = "1.1"
atomic_enum = "0.1"
statrs = "0.15"

#Enable for dist builds
#[profile.release]
#lto = true
#codegen-units = 1
